--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,9 @@
   <title>StoryBooks</title>
 </head>
 <body>
-  {{{body}}}
+  <div class="container">
+    {{{body}}}
+  </div>
 
       <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
