--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
-body {
-  background: aquamarine;
+p {
+  /* Need to use the !important here to override any styles being applied by the materialize/fontawesome stylesheets, might not even be needed with how origins work with the cascade and specificity*/
+  margin: 10px 0 !important;
+}
+
+.login-container {
+  width: 400px;
+  margin-block-start: 50px;
+  text-align: center;
 }
