--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,13 @@
-<h1>Login</h1>
+<h3><i class="fas fa-book-reader"></i>StoryBooks</h3>
+<div class="section">
+  <p class="lead">Create public and private stories from your life</p>
+</div>
+<div class="divider"></div>
+<div class="section">
+  <a href="/auth/google" class="btn yellow darken-1">
+    <i class="fab fa-google left"></i> log in with google
+  </a>
+</div>
+
+{{!-- It is actually crazy and super cool that we can just use bring in these style sheets and just apply classes to our elements and end up with a good looking component --}}
+{{!-- Upon inspecting it seems that the color and darken class are of a combined selector! So I am assuming materialize specifies darken classes for all of their colors --}}
