--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ p {
   margin: 10px 0 !important;
 }
 
+h1 {
+  font-size: 2.92rem;
+}
+
 .login-container {
   width: 400px;
   margin-block-start: 50px;
