Inserted the _header partial

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,6 +10,8 @@
   <title>StoryBooks</title>
 </head>
 <body>
+  {{!-- Inserting the _header partial --}}
+  {{> _header}}
   <div class="container">
     {{{body}}}
   </div>
