--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,10 +16,10 @@
     {{{body}}}
   </div>
 
-      <!-- Compiled and minified JavaScript -->
+    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <script>
+    {{!-- We initialize the Sidenav built into materialize --}}
+    <script> 
       M.Sidenav.init(document.querySelector('.sidenav'));
     </script>
 </body>
