--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -16,7 +16,10 @@
       {{#each stories}}
         <tr>
           {{!-- Since we're in the each loop here, we only have to state the _id, the engine will automatically know that we are referencing the current story --}}
-          <td><a href="/stories/{{_id}}"></a></td>
+          <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+          <td>{{createdAt}}</td>
+          <td><span class="dash-status">{{status}}</span></td>
+          <td></td>
         </tr>
       {{/each}}
       {{!-- As we can see, both the if and the each statements require an ending "tag" with /each and /if --}}
