added the _add_btn partial to our main layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,7 @@
 <body>
   {{!-- Inserting the _header partial --}}
   {{> _header}}
+  {{> _add_btn}}
   <div class="container">
     {{{body}}}
   </div>
