--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,8 +20,10 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     {{!-- We initialize the Sidenav built into materialize --}}
+    {{!-- We also have to initialize the select input field we brought in from materialize --}}
     <script> 
-      M.Sidenav.init(document.querySelector('.sidenav'));
+      M.Sidenav.init(document.querySelector('.sidenav'))
+      M.FormSelect.init(document.querySelector('#status'))
     </script>
 </body>
 </html>
