updated to the latest patch worked! Lets go! The editor was working regardless, but seeing that error in the console made me feel some type of way

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,7 @@
   </div>
 
     <!-- Compiled and minified JavaScript -->
+    {{!-- Seems 4.20.0 was not supported anymore, updating to 4.20.2 got rid of that pesky exception! --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.2/ckeditor.js" integrity="sha512-abfAV2gASfr4b8JYZfgEO6rByKHbXqfHIIQ2QWI/Z8L2XB3MVZhlY8Oy52C6mZbugZBPnzAz7c7RLlYwZT5DBA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     {{!-- We initialize the Sidenav built into materialize --}}
