--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -17,6 +17,7 @@
         <tr>
           {{!-- Since we're in the each loop here, we only have to state the _id, the engine will automatically know that we are referencing the current story --}}
           <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+          {{!-- so it seems to add helpers within handlebars we don't need the calling parentheses as with JavaScript, all we need to do is call the function by identifying it, passing its arguments in by space seperation --}}
           <td>{{formatDate createdAt 'MMM Do YYYY, h:mm:ss a'}}</td>
           <td><span class="dash-status">{{status}}</span></td>
           <td></td>
