--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -1,7 +1,23 @@
 <h1>Stories</h1>
 <div class="row">
   {{#each stories}}
-
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image">
+          {{!-- todo: editIcon, will be a helper --}}
+        </div>
+        <div class="card-content center-align">
+          <h2>{{title}}</h2>
+          {{!-- So we're gonna need a helper that shortens the body if its too long, as well as strip away the paragraph tag from the body of the story. This paragraph tag is coming from the autoformat that is implemented by CKEDITOR!--}}
+          <p>{{body}}</p>
+          {{!-- chip is basically a class that makes this div into a little badge coming from materialize. --}}
+          <div class="chip">
+            {{!-- we are accessing the user.image property from the user object, made available by our ref:User in the Story Schema --}}
+            <img src="{{user.image}}" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
   {{!-- With handlebars, #each comes with support for an else! No need for an if statement beforehand! I don't know if I like this feature or hate it. The else runs if there exists nothing to iterate upon. --}}
   {{else}}
     <p>No stories to display</p>
