--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -1,7 +1,8 @@
 <h2>Edit Story</h2>
 <div class="row">
   {{!-- since we are editing, it requires us to issue a put request, but forms by default only support get and post requests. To implement this we must implement a method override --}}
-  <form action="/{{story.user}}" method="POST" class="col s12" enctype="application/x-www-form-urlencoded">
+  {{!-- for our form action here, we want to PUT(update) the current story. So we use a path parameter to be able to identify the story within our routes, interpolating the current story object id into the request url this put is being made to. --}}
+  <form action="/stories/{{story._id}}" method="POST" class="col s12" enctype="application/x-www-form-urlencoded">
   {{!-- Of course we can do this in the frontend with a fetch request, but doing it in this manner, we are able to do everything on the backend. GOOD --}}
     <input type="hidden" name="_method" value="PUT">
     <div class="row">
