--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -33,7 +33,7 @@
     </div>
 
     <div class="row">
-      <input type="submit" value="Save" class="btn" role="submit button">
+      <input type="submit" value="Save" class="btn" role="button">
       <a href="/dashboard" class="btn orange">Cancel</a>
     </div>
   </form>
