finished the show.hbs body

--- a/views/stories/show.hbs
+++ b/views/stories/show.hbs
@@ -13,7 +13,7 @@
     </div>
     <div class="col s12 m4">
         <div class="card center-align">
-            <div class="card-content">
+            <div class="card-content user-content">
               {{!-- here we get access to the actual user who created the story because we populated our refs --}}
                 <span class="card-title">{{story.user.displayName}}</span>
                 <img src="{{story.user.image}}" class="circle responsive-img img-small">
