--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,7 +26,7 @@
     <script> 
       M.Sidenav.init(document.querySelector('.sidenav'))
       M.FormSelect.init(document.querySelector('#status'))
-      if (document.querySelector('form')) {
+      if (document.querySelector('#body')) {
       CKEDITOR.replace('body', {
         plugins: 'wysiwygarea, toolbar, basicstyles, link'
       }) //ensures we dont produce errors/ run CKEDITOR on pages that dont have the add.hbs body.
